--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="main-links">
           <a>
             <img
-              src="/display_images/legging.png"
+              src="./display_images/legging.png"
               alt="leggings"
               height="{800}"
               width="{800}"
@@ -26,7 +26,7 @@
           </a>
           <a>
             <img
-              src="/display_images/dupatta_white.png"
+              src="./display_images/dupatta_white.png"
               alt="dupattas"
               height="{800}"
               width="{800}"
@@ -36,14 +36,14 @@
         </div>
         <div class="main-subcategories-grid">
           <div class="main-empty-card">
-            <img src="/background_tree_clean.png" alt="" />
+            <img src="./background_tree_clean.png" alt="" />
           </div>
           <a>
-            <img src="/display_images/legging.png" alt="ankle length legging" />
+            <img src="./display_images/legging.png" alt="ankle length legging" />
             <span>Ankle length Leggings</span>
           </a>
           <a>
-            <img src="/display_images/legging.png" alt="chudidar legging" />
+            <img src="./display_images/legging.png" alt="chudidar legging" />
             <span>Chudidar Leggings</span>
           </a>
           <div class="main-welcome-card">
@@ -55,14 +55,14 @@
               Feel the blossoming experience while you shop!
             </p>
             <a class="main-aboutus-link">
-              About Us <img class="icon" src="go.svg" />
+              About Us <img class="icon" src="./go.svg" />
             </a>
           </div>
           <div class="main-empty-card">
-            <img src="/background_tree_clean.png" alt="" />
+            <img src="./background_tree_clean.png" alt="" />
           </div>
           <a>
-            <img src="/display_images/dupatta.png" alt="dupatta" />
+            <img src="./display_images/dupatta.png" alt="dupatta" />
             <span>BDSStyle® Dupattas</span>
           </a>
         </div>
@@ -74,7 +74,7 @@
             <div class="footer-logo">
               <a>
                 <img
-                  src="/logo_white.png"
+                  src="./logo_white.png"
                   alt="logo-blossom digital shopping"
                 />
                 <p>Blossom <span>Digital Shopping™</span></p>
@@ -91,7 +91,7 @@
             </div>
             <div class="footer-contact-us-details">
               <p>
-                <b>Official Address:</b>
+                <b>Registered Official Address:</b>
               </p>
               <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
               <p>Gafoor Nagar, Hi-tech city road,</p>
@@ -155,7 +155,7 @@
             <span class="popup-bds">Blossom Digital Shopping™</span>
           </div>
           <div class="popup-login">
-            <button class="button" onclick="close_popup_handler()"><img src="close.svg" /></button>
+            <button class="button" onclick="close_popup_handler()"><img src="./close.svg" /></button>
           </div>
         </div>
         <div class="popup-tag-and-img">
@@ -173,7 +173,7 @@
             </p>
             <p class="popup-maintenance">Website under maintenance. Will resume shortly</p>
           </div>
-          <img src="/ganesh.png" width="250" height="250" alt="img" />
+          <img src="./ganesh.png" width="250" height="250" alt="img" />
         </div>
         <p class="popup-tandc">
           Renowned & Trusted digital store since 2022 *&#40;T&C apply&#41;
