--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="main-links">
           <a>
             <img
-              src="display_images/legging.png"
+              src="legging.png"
               alt="leggings"
               height="{800}"
               width="{800}"
@@ -26,7 +26,7 @@
           </a>
           <a>
             <img
-              src="display_images/dupatta_white.png"
+              src="dupatta_white.png"
               alt="dupattas"
               height="{800}"
               width="{800}"
@@ -39,11 +39,11 @@
             <img src="background_tree_clean.png" alt="" />
           </div>
           <a>
-            <img src="display_images/legging.png" alt="ankle length legging" />
+            <img src="legging.png" alt="ankle length legging" />
             <span>Ankle length Leggings</span>
           </a>
           <a>
-            <img src="display_images/legging.png" alt="chudidar legging" />
+            <img src="legging.png" alt="chudidar legging" />
             <span>Chudidar Leggings</span>
           </a>
           <div class="main-welcome-card">
@@ -62,7 +62,7 @@
             <img src="background_tree_clean.png" alt="" />
           </div>
           <a>
-            <img src="display_images/dupatta.png" alt="dupatta" />
+            <img src="dupatta.png" alt="dupatta" />
             <span>BDSStyle® Dupattas</span>
           </a>
         </div>
