--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p>
                 <b>Registered Official Address:</b>
               </p>
-              <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
+              <p>Plot 88 & 88/A, Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
               <p>Gafoor Nagar, Hi-tech city road,</p>
               <p>Madhapur, 500081</p>
               <p>Hyderabad, Telangana, India</p>
