--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <body>
     <div id="not-popup">
       <main class="main-main">
-        <h1>
-          Blossom
-          <br />
-          Digital Shopping™
-        </h1>
+        <div>
+          <h1>
+            Blossom
+            <br />
+            Digital Shopping™
+          </h1>
+          <h2>& BDSStyle®</h2>
+        </div>
         <div class="main-links">
           <a>
             <img
@@ -73,10 +76,7 @@
           <div class="footer-logo-and-contact">
             <div class="footer-logo">
               <a>
-                <img
-                  src="logo_white.png"
-                  alt="logo-blossom digital shopping"
-                />
+                <img src="logo_white.png" alt="logo-blossom digital shopping" />
                 <p>Blossom <span>Digital Shopping™</span></p>
               </a>
             </div>
@@ -93,7 +93,7 @@
               <p>
                 <b>Registered Official Address:</b>
               </p>
-              <p>Plot 88 & 88/A, Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
+              <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
               <p>Gafoor Nagar, Hi-tech city road,</p>
               <p>Madhapur, 500081</p>
               <p>Hyderabad, Telangana, India</p>
@@ -116,8 +116,8 @@
             There are no other offices / representatives / subsidiaries /agents
             / agencies / employees / marketing team Online / Offline across
             Hyderabad / Telangana / India / USA / UK or across Global appointed
-            to act on behalf of Blossom Digital Shopping™ and BDSStyle® Any other
-            persons or entity trying to imitate or mis-represent me or my
+            to act on behalf of Blossom Digital Shopping™ and BDSStyle® Any
+            other persons or entity trying to imitate or mis-represent me or my
             Business Name and Website URL or through digital platforms or social
             platforms for any purpose, marketing or posting Ads or creating
             links in websites, creating duplicate or shadow websites or
@@ -134,8 +134,8 @@
         <hr />
         <div class="footer-builder">
           <span>
-            Designed, developed & maintained by pranav tuma, sangeetha tuma
-            and sridharnath tuma
+            Designed, developed & maintained by pranav tuma, sangeetha tuma and
+            sridharnath tuma
           </span>
         </div>
         <div class="footer-bottom-spacer" />
@@ -152,10 +152,12 @@
           <div>
             <span class="popup-welcome">Welcome</span> to
             <br />
-            <span class="popup-bds">Blossom Digital Shopping™</span>
+            <span class="popup-bds">Blossom Digital Shopping™<br/><span class="popup-small">& BDSStyle®</span></span>
           </div>
           <div class="popup-login">
-            <button class="button" onclick="close_popup_handler()"><img src="close.svg" /></button>
+            <button class="button" onclick="close_popup_handler()">
+              <img src="close.svg" />
+            </button>
           </div>
         </div>
         <div class="popup-tag-and-img">
@@ -171,7 +173,9 @@
               </strong>
               at best price
             </p>
-            <p class="popup-maintenance">Website under maintenance. Will resume shortly</p>
+            <p class="popup-maintenance">
+              Website under maintenance. Will resume shortly
+            </p>
           </div>
           <img src="ganesh.png" width="250" height="250" alt="img" />
         </div>
