--- a/index.html
+++ b/index.html
@@ -147,12 +147,16 @@
       class="popup-center popup-dont-show"
       onclick="close_popup_handler()"
     >
-      <a class="popup-popup" onclick="stop_propagation(event)">
+      <div class="popup-popup" onclick="stop_propagation(event)">
         <div class="popup-heading-and-login">
           <div>
             <span class="popup-welcome">Welcome</span> to
             <br />
-            <span class="popup-bds">Blossom Digital Shopping™<br/><span class="popup-small">& BDSStyle®</span></span>
+            <span class="popup-bds"
+              >Blossom Digital Shopping™<br /><span class="popup-small"
+                >& BDSStyle®</span
+              ></span
+            >
           </div>
           <div class="popup-login">
             <button class="button" onclick="close_popup_handler()">
@@ -173,7 +177,7 @@
               </strong>
               at best price
             </p>
-                        <p>
+            <p>
               <a href="https://www.sangeethatuma.com/"
                 ><strong>https://sangeethatuma.com</strong></a
               >
@@ -187,7 +191,7 @@
         <p class="popup-tandc">
           Renowned & Trusted digital store since 2022 *&#40;T&C apply&#41;
         </p>
-      </a>
+      </div>
     </div>
 
     <script>
