--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
                 ><strong>https://sangeethatuma.com</strong></a
               >
             </p>
+            <div class="popup-deleted-emails">
+              Permanently deleted Google Workspace email on 24-05-2025
+              <ul>
+                <li>sangeethatuma@blossomdigitalshop.com </li>
+                <li>sangeetha@blossomdigitalshop.com </li>
+              </ul>
+            </div>
             <p class="popup-maintenance">
               Website under maintenance. Will resume shortly
             </p>
