--- a/index.html
+++ b/index.html
@@ -74,29 +74,61 @@
         <div class="footer-banner"></div>
         <div class="footer-reverse">
           <div class="footer-logo-and-contact">
-            <div class="footer-logo">
-              <a>
-                <img src="logo_white.png" alt="logo-blossom digital shopping" />
-                <p>Blossom <span>Digital Shopping™</span></p>
-              </a>
+            <!-- bds and blossom logo -->
+            <div>
+              <!-- logo -->
+              <div class="footer-logo">
+                <div>
+                  <a>
+                    <img
+                      src="logo_white.png"
+                      alt="logo-blossom digital shopping"
+                    />
+                    <div>
+                      <p>Blossom <span>Digital Shopping™</span></p>
+                      <p class="footer-and-bds">& BDSStyle®</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              
             </div>
+            <!-- registered address -->
             <div class="footer-contact-us-details" id="contact-us">
-              <p>
-                <b>Mrs. Sangeetha Tuma</b>
-              </p>
-              <p>Owner, Founder & Sole Proprietor</p>
-              <p>
-                <a href="tel:+6302171069">(+91) 6302171069</a>
-              </p>
+              <!-- owner -->
+              <div class="footer-contact-us-details owner">
+                <p>
+                  <b>Mrs. Sangeetha Tuma</b>
+                </p>
+                <p>Owner, Founder & Sole Proprietor</p>
+                <p>
+                  <a href="tel:+6302171069">(+91) 6302171069</a>
+                </p>
+              </div>
+              <div class="footer-address">
+                <p>
+                  <b class="label">Registered Official Address:</b>
+                </p>
+                <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
+                <p>Gafoor Nagar, Hi-tech city road,</p>
+                <p>Madhapur, 500081</p>
+                <p>Hyderabad, Telangana, India</p>
+              </div>
             </div>
-            <div class="footer-contact-us-details">
-              <p>
-                <b>Registered Official Address:</b>
-              </p>
-              <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
-              <p>Gafoor Nagar, Hi-tech city road,</p>
-              <p>Madhapur, 500081</p>
-              <p>Hyderabad, Telangana, India</p>
+
+            <!-- license numbers -->
+            <div class="footer-reg-numbers">
+              <ul>
+                <li><b class="label">GSTIN no:</b> 36AETPT2433F2Z6</li>
+                <li><b class="label">Trademark License no:</b> 5660425</li>
+                <li>
+                  <b class="label"
+                    >Government of Telangana Shops & Establishment License
+                    No:</b
+                  >
+                  SEA/HYD/ALO/03/0406022/2022
+                </li>
+              </ul>
             </div>
           </div>
           <hr />
@@ -185,8 +217,8 @@
             <div class="popup-deleted-emails">
               Permanently deleted Google Workspace email on 24-05-2025
               <ul>
-                <li>sangeethatuma@blossomdigitalshop.com </li>
-                <li>sangeetha@blossomdigitalshop.com </li>
+                <li>sangeethatuma@blossomdigitalshop.com</li>
+                <li>sangeetha@blossomdigitalshop.com</li>
               </ul>
             </div>
             <p class="popup-maintenance">
