--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
                   <a href="tel:+6302171069">(+91) 6302171069</a>
                 </p>
               </div>
-              <div class="footer-address">
+              <div class="footer-address" id="contact-us">
                 <p>
-                  <b class="label">Registered Official Address:</b>
+                  <b class="label">Registered Office Address:</b>
                 </p>
-                <p>Flat no. 3D, Jains Anand Rock Garden Apts Phase 1,</p>
+                <p>Flat No. 3D, Plot No 88 & 88/A,</p>
+                <p>Jains Anand Rock Garden Apts Phase 1,</p>
                 <p>Gafoor Nagar, Hi-tech city road,</p>
                 <p>Madhapur, 500081</p>
                 <p>Hyderabad, Telangana, India</p>
