--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                   </a>
                 </div>
               </div>
-              
             </div>
             <!-- registered address -->
             <div class="footer-contact-us-details" id="contact-us">
@@ -101,6 +100,9 @@
                   <b>Mrs. Sangeetha Tuma</b>
                 </p>
                 <p>Owner, Founder & Sole Proprietor</p>
+                <p>
+                  <a href="tel:+919866305298">(+91) 9866305298</a>
+                </p>
               </div>
               <div class="footer-address" id="contact-us">
                 <p>
