--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
         <hr />
         <div class="footer-builder">
           <span>
-            Designed, developed & maintained by pranav tuma, sangeetha tuma and
-            sridharnath tuma
+            Powered by PraSanSri
           </span>
         </div>
         <div class="footer-bottom-spacer" />
