--- a/index.html
+++ b/index.html
@@ -3,232 +3,251 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sangeetha Tuma</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <title>Blossom Digital Shopping™</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
-    <div class="body">
-      <h1>Sangeetha Tuma</h1>
-
-      <!-- START: section one, Organizations -->
-      <section>
-        <h2>Organizations</h2>
-
-        <!-- organization one: prime properties real estate agency -->
-        <div class="organization">
-          <h3>Prime Properties Real Estate Agency®</h3>
-          <p class="operation-sector">Real estate services</p>
-          <ul>
-            <li>
-              <a href="https://www.primepropertiesagency.com"
-                >https://www.primepropertiesagency.com</a
-              >
-            </li>
-            <li>
-              Powered by PraSanSri.
-            </li>
-            <li>
-              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
-              TUMA
-            </li>
-            <li>
-              Self-setup & established with own capital/investment and commenced
-              in 2020
-            </li>
-            <li>
-              <a href="https://www.primepropertiesagency.com"
-                >https://www.primepropertiesagency.com®</a
-              >
-              website is live since november 2020
-            </li>
-          </ul>
-          <!-- false domains subsection  -->
-          <div class="false-domains">
-            <h4>
-              Domains not connected and inactive with complete domain rights
-            </h4>
-            <ul class="red">
-              <li><s>primepropertiesagency.in </s>🚫</li>
-              <li><s>primepropertiesagency.co.in </s>🚫</li>
-            </ul>
+    <div id="not-popup">
+      <main class="main-main">
+        <div>
+          <h1>
+            Blossom
+            <br />
+            Digital Shopping™
+          </h1>
+          <h2>& BDSStyle®</h2>
+        </div>
+        <div class="main-links">
+          <a>
+            <img
+              src="legging.png"
+              alt="leggings"
+              height="{800}"
+              width="{800}"
+            />
+            <span>Leggings</span>
+          </a>
+          <a>
+            <img
+              src="dupatta_white.png"
+              alt="dupattas"
+              height="{800}"
+              width="{800}"
+            />
+            <span>BDSStyle® Dupattas</span>
+          </a>
+        </div>
+        <div class="main-subcategories-grid">
+          <div class="main-empty-card">
+            <img src="background_tree_clean.png" alt="" />
           </div>
-          <!-- organization licenses -->
-          <div class="organization-licenses">
-            <h4>Organization licenses</h4>
-            <ul>
-              <li>GSTIN Licence Issued Date : 02-07-2021</li>
-              <li>
-                GSTIN NO: 36AETPT2433F1Z7
-              </li>
-              <li>Trade Mark License No: 6084751</li>
-              <li>
-                Government Of Telangana Shops & Establishment License No:
-                SEA/HYD/ALO/03/0431431/2022
-              </li>
-            </ul>
+          <a>
+            <img src="legging.png" alt="ankle length legging" />
+            <span>Ankle length Leggings</span>
+          </a>
+          <a>
+            <img src="legging.png" alt="chudidar legging" />
+            <span>Chudidar Leggings</span>
+          </a>
+          <div class="main-welcome-card">
+            <h2>Welcome</h2>
+            <p>
+              Choose from a unique collection of products with a perfect style
+              and design, with best quality and price.
+              <br />
+              Feel the blossoming experience while you shop!
+            </p>
+            <a class="main-aboutus-link">
+              About Us <img class="icon" src="go.svg" />
+            </a>
           </div>
-          <!-- deleted email ids -->
-          <div class="red">
-            <h4>
-              <span class="red">Permanently deleted</span> Google Workspace
-              email on 24-05-2025
-            </h4>
-            <ul>
-              <li class="strike-through">
-                sangeethatuma@primepropertiesagency.com
-              </li>
-              <li class="strike-through">
-                sangeetha@primepropertiesagency.com
-              </li>
-            </ul>
+          <div class="main-empty-card">
+            <img src="background_tree_clean.png" alt="" />
+          </div>
+          <a>
+            <img src="dupatta.png" alt="dupatta" />
+            <span>BDSStyle® Dupattas</span>
+          </a>
+        </div>
+      </main>
+      <footer class="footer-footer">
+        <div class="footer-banner"></div>
+        <div class="footer-reverse">
+          <div class="footer-logo-and-contact">
+            <!-- bds and blossom logo -->
+            <div>
+              <!-- logo -->
+              <div class="footer-logo">
+                <div>
+                  <a>
+                    <img
+                      src="logo_white.png"
+                      alt="logo-blossom digital shopping"
+                    />
+                    <div>
+                      <p>Blossom <span>Digital Shopping™</span></p>
+                      <p class="footer-and-bds">& BDSStyle®</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- registered address -->
+            <div class="footer-contact-us-details" id="contact-us">
+              <!-- owner -->
+              <div class="footer-contact-us-details owner">
+                <p>
+                  <b>Mrs. Sangeetha Tuma</b>
+                </p>
+                <p>Owner, Founder & Sole Proprietor</p>
+                <p>
+                  <a href="tel:+919866305298">(+91) 9866305298</a>
+                </p>
+              </div>
+              <div class="footer-address" id="contact-us">
+                <p>
+                  <b class="label">Registered Office Address:</b>
+                </p>
+                <p>Flat No. 3D, Plot No 88 & 88/A,</p>
+                <p>Jains Anand Rock Garden Apts Phase 1,</p>
+                <p>Gafoor Nagar, Hi-tech city road,</p>
+                <p>Madhapur, 500081</p>
+                <p>Hyderabad, Telangana, India</p>
+              </div>
+            </div>
+
+            <!-- license numbers -->
+            <div class="footer-reg-numbers">
+              <ul>
+                <li><b class="label">GSTIN no:</b> 36AETPT2433F2Z6</li>
+                <li><b class="label">Trademark License no:</b> 5660425</li>
+                <li>
+                  <b class="label"
+                    >Government of Telangana Shops & Establishment License
+                    No:</b
+                  >
+                  SEA/HYD/ALO/03/0406022/2022
+                </li>
+              </ul>
+            </div>
+          </div>
+          <hr />
+          <div class="footer-links">
+            <a>Leggings</a>
+            <a>BDSStyle® Dupattas</a>
+            <a>About Us</a>
+            <a>Profile</a>
+            <a>Terms & Conditions</a>
+            <a>Privacy Policy</a>
+            <a>Returns & Refund Policy</a>
           </div>
         </div>
-
-        <!-- organization two: blossom digital shopping -->
-        <div class="organization">
-          <h3>Blossom Digital Shopping™</h3>
-          <p class="operation-sector">Clothing/Apparel</p>
-          <ul>
-            <li>
-              <a href="https://www.blossomdigitalshop.com"
-                >https://www.blossomdigitalshop.com</a
-              >
-            </li>
-            <li>
-              BDS Style® (brand name) Trademark Registered ✅ 
-            </li>
-            <li>
-              Powered by PraSanSri.
-            </li>
-            <li>
-              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
-              TUMA
-            </li>
-            <li>
-              Self-Setup & Established with Own Capital/Investment and commenced
-              in 2022
-            </li>
-            <li>
-              <a href="https://www.blossomdigitalshop.com"
-                >https://www.blossomdigitalshop.com</a
-              >
-              website is live since april 2022
-            </li>
-          </ul>
-          <!-- false domains subsection  -->
-          <div class="false-domains">
-            <h4>
-              Domains not connected and inactive with complete domain rights
-            </h4>
-            <ul class="red">
-              <li><s>bdsstyle.com</s> 🚫</li>
-            </ul>
-          </div>
-          <!-- organization licenses -->
-          <div class="organization-licenses">
-            <h4>Organization licenses</h4>
-            <ul>
-              <li>GSTIN Licence Issued Date : 21-03-2022</li>
-              <li>GSTIN No : 36AETPT2433F2Z6</li>
-              <li>Trademark Licence No : 5660425</li>
-              <li>Government Of Telangana Shops & Establishment Licence No</li>
-              <li>SEA/HYD/ALO/03/0406022/2022</li>
-            </ul>
-          </div>
-          <!-- deleted email ids -->
-          <div class="red">
-            <h4>
-              <span class="red">Permanently deleted</span> Google Workspace
-              email on 24-05-2025
-            </h4>
-            <ul>
-              <li class="strike-through">
-                sangeethatuma@blossomdigitalshop.com
-              </li>
-              <li class="strike-through">sangeetha@blossomdigitalshop.com</li>
-            </ul>
-          </div>
-        </div>
-
-        <!-- organization three: prasansri  -->
-        <div class="organization">
-          <h3>PraSanSri</h3>
-          <p class="operation-sector">Transport services</p>
-          <p><a href="https://prasansri.com">https://prasansri.com</a></p>
+        <hr />
+        <div class="footer-disclaimer">
           <p>
-            Owned by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
+            There are no other offices / representatives / subsidiaries /agents
+            / agencies / employees / marketing team Online / Offline across
+            Hyderabad / Telangana / India / USA / UK or across Global appointed
+            to act on behalf of Blossom Digital Shopping™ and BDSStyle® Any
+            other persons or entity trying to imitate or mis-represent me or my
+            Business Name and Website URL or through digital platforms or social
+            platforms for any purpose, marketing or posting Ads or creating
+            links in websites, creating duplicate or shadow websites or
+            imitating the websites are liable to be prosecuted and appropriate
+            legal action shall be initiated.
           </p>
         </div>
-
-        <!-- realtor licenses -->
-        <div class="organization">
-          <h3>Telangana State Real Estate Regulatory Authority</h3>
-          <ul>
-            <li>Authorized User : Mrs. Sangeetha Tuma</li>
-            <li>License No : A02400001060</li>
-            <li>
-              Note: Since the issue of TG RERA license I have not authorized any
-              Entity/ Agent or Person/s to act on my behalf
-            </li>
-          </ul>
+        <hr />
+        <div class="footer-copyrights">
+          <span>Copyright @ 2022-2025</span>
+          <span>Official Website of Blossom Digital Shopping™</span>
+          <span>All Rights Reserved</span>
         </div>
-        <!-- END: organizations section -->
-      </section>
-      <hr />
-
-      <!-- START: section two, about me rant -->
-      <section class="about-me">
-        <h2>About me</h2>
-        <div class="about-container">
-          <figure>
-            <img src="me.jpg" alt="me" />
-            <figcaption>Sangeetha Tuma</figcaption>
-          </figure>
-          <div>
-            <p>I am Mrs.SANGEETHA TUMA</p>
-            <p>
-              4th generation from the famous business family of Hyderabad with
-              experience and knowledge in business
-            </p>
-            <p>
-              For generations in the family, we were into B2B business in this
-              segment apart from my own experience in the business, the thought
-              of coming up with my own brand store to offer with the best of
-              digital shopping experience became a reality in the form of B D S
-              Style®
-            </p>
-          </div>
+        <hr />
+        <div class="footer-builder">
+          <span>
+            Powered by PraSanSri
+          </span>
         </div>
-        <ul>
-          <li>Married: August 1998</li>
-          <li>
-            Spouse: Mr.SRIDHARNATH TUMA
-          </li>
-          <li>
-            Son: Mr. PRANAV TUMA
-          </li>
-        </ul>
-        <div class="address">
-          <p>
-            Permanent Residence & Registered Office
-            Address:
-          </p>
-          <pre>
-Flat No 3D, Plot No 88 & 88/A 
-Jains Anand Rock Garden Phase-1 
-Gafoor Nagar, Hitech City Road 
-Madhapur Pin Code 500081 
-Hyderabad Telangana India
-                </pre
-          >
-        </div>
-        <!-- END: section two, about me rant -->
-      </section>
+        <div class="footer-bottom-spacer" />
+      </footer>
     </div>
-    <footer>
-      <p>Powered by PraSanSri</p>
-      <p>Copyright @ 2025</p>
-      <p>All Rights Reserved</p>
-    </footer>
+
+    <div
+      id="popup"
+      class="popup-center popup-dont-show"
+      onclick="close_popup_handler()"
+    >
+      <div class="popup-popup" onclick="stop_propagation(event)">
+        <div class="popup-heading-and-login">
+          <div>
+            <span class="popup-welcome">Welcome</span> to
+            <br />
+            <span class="popup-bds"
+              >Blossom Digital Shopping™<br /><span class="popup-small"
+                >& BDSStyle®</span
+              ></span
+            >
+          </div>
+          <div class="popup-login">
+            <button class="button" onclick="close_popup_handler()">
+              <img src="close.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="popup-tag-and-img">
+          <div>
+            <p>
+              Exclusive collections of
+              <strong>
+                <i>leggings</i>
+              </strong>
+              &
+              <strong>
+                <i>dupattas</i>
+              </strong>
+              at best price
+            </p>
+            <div class="popup-deleted-emails">
+              Permanently deleted Google Workspace email on 24-05-2025
+              <ul>
+                <li>sangeethatuma@blossomdigitalshop.com</li>
+                <li>sangeetha@blossomdigitalshop.com</li>
+              </ul>
+            </div>
+            <p class="popup-maintenance">
+              Website under maintenance. Will resume shortly
+            </p>
+          </div>
+          <img src="ganesh.png" width="250" height="250" alt="img" />
+        </div>
+        <p class="popup-tandc">
+          Renowned & Trusted digital store since 2022 *&#40;T&C apply&#41;
+        </p>
+      </div>
+    </div>
+
+    <script>
+      let display = false;
+
+      // on window load: open popup
+      window.onload = () => {
+        document.getElementById("popup").classList.remove("popup-dont-show");
+        // also set height of body to 100vh
+        document.getElementById("not-popup").classList.add("not-popup");
+      };
+
+      // attach listener to close window on click on outside perimeter or on close button
+      const close_popup_handler = () => {
+        document.getElementById("popup").classList.add("popup-dont-show");
+        // remove the height overflow on the body
+        document.getElementById("not-popup").classList.remove("not-popup");
+      };
+
+      // prevent click propagation on popup banner
+      const stop_propagation = (e) => {
+        e.stopPropagation();
+      };
+    </script>
   </body>
 </html>
