--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <hr />
         <div class="footer-builder">
           <span>
-            Powered by PraSanSri
+            Powered by PraSanSri IT Services
           </span>
         </div>
         <div class="footer-bottom-spacer" />
@@ -248,4 +248,5 @@
     </script>
   </body>
 </html>
+
 
