--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE hl>
+<hl lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blossom Digital Shopping™</title>
+    <title>Blossom Digital Shopping</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
           <h1>
             Blossom
             <br />
-            Digital Shopping™
+            Digital Shopping
           </h1>
           <h2>& BDSStyle®</h2>
         </div>
@@ -85,7 +85,7 @@
                       alt="logo-blossom digital shopping"
                     />
                     <div>
-                      <p>Blossom <span>Digital Shopping™</span></p>
+                      <p>Blossom <span>Digital Shopping</span></p>
                       <p class="footer-and-bds">& BDSStyle®</p>
                     </div>
                   </a>
@@ -148,7 +148,7 @@
             There are no other offices / representatives / subsidiaries /agents
             / agencies / employees / marketing team Online / Offline across
             Hyderabad / Telangana / India / USA / UK or across Global appointed
-            to act on behalf of Blossom Digital Shopping™ and BDSStyle® Any
+            to act on behalf of Blossom Digital Shopping and BDSStyle® Any
             other persons or entity trying to imitate or mis-represent me or my
             Business Name and Website URL or through digital platforms or social
             platforms for any purpose, marketing or posting Ads or creating
@@ -160,13 +160,13 @@
         <hr />
         <div class="footer-copyrights">
           <span>Copyright @ 2022-2025</span>
-          <span>Official Website of Blossom Digital Shopping™</span>
+          <span>Official Website of Blossom Digital Shopping</span>
           <span>All Rights Reserved</span>
         </div>
         <hr />
         <div class="footer-builder">
           <span>
-            Powered by PraSanSri IT Services
+            Powered by PraSanSri
           </span>
         </div>
         <div class="footer-bottom-spacer" />
@@ -184,7 +184,7 @@
             <span class="popup-welcome">Welcome</span> to
             <br />
             <span class="popup-bds"
-              >Blossom Digital Shopping™<br /><span class="popup-small"
+              >Blossom Digital Shopping<br /><span class="popup-small"
                 >& BDSStyle®</span
               ></span
             >
@@ -247,6 +247,7 @@
       };
     </script>
   </body>
-</html>
+</hl>
+
 
 
